--- a/FinalProject/classification/projects.css
+++ b/FinalProject/classification/projects.css
@@ -68,7 +68,7 @@ pre {
 	scrollbar-face-color: #527BBD;
 	scrollbar-arrow-color: #DEE7F7;
 	scrollbar-track-color: #DEE7F7;
-	padding-bottom: 24px!ie7;
+	padding-bottom: 24pxie7;
 }
 
 p {
